--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "font-awesome": ">=4.1.0",
     "jquery": "~2.1.4",
     "json3": "~3.3.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "tinycolorpicker": "~0.9.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
