--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery": "~2.1.4",
     "json3": "~3.3.1",
     "lodash": "~2.4.1",
-    "tinycolorpicker": "~0.9.1"
+    "tinycolorpicker": "~0.9.1",
+    "angular-moment": "~0.10.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
