--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-material": "~0.11.1",
+    "angular-moment": "~0.10.3",
     "angular-resource": ">=1.2.*",
     "angular-route": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
@@ -14,8 +15,8 @@
     "jquery": "~2.1.4",
     "json3": "~3.3.1",
     "lodash": "~2.4.1",
-    "tinycolorpicker": "~0.9.1",
-    "angular-moment": "~0.10.3"
+    "lzwCompress.js": "lzwcompress#~0.1.8",
+    "tinycolorpicker": "~0.9.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
